--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -38,20 +38,20 @@ eleventyNavigation:
             <!-- Left Image Section -->
             <div class="cs-left">
                 <picture class="cs-picture cs-picture1">
-                    <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="cabinets" loading="lazy" width="400" height="563">
+                    <source media="(max-width: 600px)" srcset="/assets/images/DanielVanWormerPicture.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/DanielVanWormerPicture.jpg">
+                    <img aria-hidden="true" decoding="async" src="/assets/images/DanielVanWormerPicture.jpg" alt="A picture of Daniel (Founder)" loading="lazy" width="400" height="563">
                 </picture>
                 <picture class="cs-picture cs-picture2">
-                    <source media="(max-width: 600px)" srcset="/assets/images/construction-m.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/construction.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/construction.jpg" alt="house" loading="lazy" width="400" height="563">
+                    <source media="(max-width: 600px)" srcset="/assets/svgs/dvlogo.svg">
+                    <source media="(min-width: 601px)" srcset="/assets/svgs/dvlogo.svg">
+                    <img aria-hidden="true" decoding="async" src="/assets/svgs/dvlogo.svg" alt="log" loading="lazy" width="200" height="200">
                 </picture>
             </div>
             <!-- Right Content Section-->
             <div class="cs-right">
                 <span class="cs-topper">About Us</span>
-                <h2 class="cs-title">About Company Title</h2>
+                <h2 class="cs-title">DV Web Development</h2>
                 <p class="cs-text">
                     In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei aptent taciti sociosqu ad litora torquent per.
                 </p>
@@ -62,8 +62,8 @@ eleventyNavigation:
                     <p class="cs-flex-p">
                         In consequat tincidunt turpis sit amet imperdiet. Praesent Classei consequat tincidunt turpis sit amet imperdiet for mind.
                     </p>
-                    <span class="cs-name">Justin Time</span>
-                    <span class="cs-job">CEO-Founder</span>
+                    <span class="cs-name">Daniel VanWormer</span>
+                    <span class="cs-job">Founder and Lead Developer</span>
                     <img class="cs-quote-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="gavel" width="136" height="77">
                 </div>
                 <a href="/projects" class="cs-button-solid">Our Projects</a>
