finished out pages, added some pictures

--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -41,7 +41,7 @@ eleventyNavigation:
                     <span class="cs-topper">Contact</span>
                     <h2 class="cs-title">Get in Touch</h2>
                     <p class="cs-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ridiculus elementum ullamcorper ipsum porttitor aliquam. Id magna urna ultrices odio pulvinar. Sed ut.
+                        Reach out today to get started on the site that will change your business!
                     </p>
                 </div>
                 <label>
@@ -69,23 +69,11 @@ eleventyNavigation:
             <div class="cs-right-section">
                 <!--Email-->
                 <span class="cs-header">Email</span>
-                <a class="cs-link" href="mailto:{{client.email}}">{{client.email}}</a>
+                <a class="cs-link" href="mailto:dvwebdev1@gmail.com">dvwebdev1@gmail.com</a>
                 <!--Phone-->
                 <span class="cs-header">Phone</span>
-                <a class="cs-link" href="tel:{{client.phoneForTel}}">{{client.phoneFormatted}}</a>
-                <!--Address-->
-                <span class="cs-header">Address</span>
-                <a class="cs-link" href="{{client.address.mapLink}}">
-                    {{client.address.lineOne}},
-                    <br/>
-                    {{client.address.lineTwo}},
-                    <br/>
-                    <span class="cs-block">
-                        {{client.address.city}}
-                        {{client.address.state}}
-                        {{client.address.zip}}
-                    </span>
-                </a>
+                <a class="cs-link" href="tel:7405036439">740-503-6439</a>
+                
 
                 <!-- Background Image-->
                 <picture class="cs-bg-picture">
