--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -22,9 +22,9 @@ eleventyNavigation:
     <section id="int-hero">
         <h1 id="home-h">About Us</h1>
         <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="kitchen cabinets" loading="eager" width="2500" height="1667">
+            <source media="(max-width: 600px)" srcset="/assets/images/twomacs.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/twomacs.jpg">
+            <img aria-hidden="true" decoding="async" src="/assets/images/twomacs.jpg" alt="kitchen cabinets" loading="eager" width="2500" height="1667">
         </picture>
 
     </section>
@@ -38,15 +38,23 @@ eleventyNavigation:
             <!-- Left Image Section -->
             <div class="cs-left">
                 <picture class="cs-picture cs-picture1">
-                    <source media="(max-width: 600px)" srcset="/assets/images/DanielVanWormerPicture.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/DanielVanWormerPicture.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/DanielVanWormerPicture.jpg" alt="A picture of Daniel (Founder)" loading="lazy" width="400" height="563">
+                    <source media="(max-width: 600px)" srcset="/assets/images/DanielVanWormerPicture-removebg.png">
+                    <source media="(min-width: 601px)" srcset="/assets/images/DanielVanWormerPicture-removebg.png">
+                    <img aria-hidden="true" decoding="async" src="/assets/images/DanielVanWormerPicture-removebg.png" alt="A picture of Daniel (Founder)" loading="lazy" width="400" height="563">
                 </picture>
-                <picture class="cs-picture cs-picture2">
+                <!-- <picture class="cs-picture cs-picture2">
                     <source media="(max-width: 600px)" srcset="/assets/svgs/dvlogo.svg">
                     <source media="(min-width: 601px)" srcset="/assets/svgs/dvlogo.svg">
                     <img aria-hidden="true" decoding="async" src="/assets/svgs/dvlogo.svg" alt="log" loading="lazy" width="200" height="200">
-                </picture>
+                </picture> -->
+                <div class="cs-flex-group">
+                    <p class="cs-flex-p">
+                        In consequat tincidunt turpis sit amet imperdiet. Praesent Classei consequat tincidunt turpis sit amet imperdiet for mind.
+                    </p>
+                    <span class="cs-name">Daniel VanWormer</span>
+                    <span class="cs-job">Founder and Lead Developer</span>
+                    <img class="cs-quote-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="gavel" width="136" height="77">
+                </div>
             </div>
             <!-- Right Content Section-->
             <div class="cs-right">
@@ -58,18 +66,13 @@ eleventyNavigation:
                 <p class="cs-text">
                     In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei aptent taciti sociosqu ad litora torquent per.
                 </p>
-                <div class="cs-flex-group">
-                    <p class="cs-flex-p">
-                        In consequat tincidunt turpis sit amet imperdiet. Praesent Classei consequat tincidunt turpis sit amet imperdiet for mind.
-                    </p>
-                    <span class="cs-name">Daniel VanWormer</span>
-                    <span class="cs-job">Founder and Lead Developer</span>
-                    <img class="cs-quote-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="gavel" width="136" height="77">
-                </div>
+                
                 <a href="/projects" class="cs-button-solid">Our Projects</a>
             </div>
         </div>
     </section>
+
+    
 
     {% include 'components/cta.html' %}
 
