preloading me pic

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -49,7 +49,7 @@ eleventyNavigation:
                 </picture> -->
                 <div class="cs-flex-group">
                     <p class="cs-flex-p">
-                        In consequat tincidunt turpis sit amet imperdiet. Praesent Classei consequat tincidunt turpis sit amet imperdiet for mind.
+                        In consequat tincidunt turpis sit amet imperdiet.
                     </p>
                     <span class="cs-name">Daniel VanWormer</span>
                     <span class="cs-job">Founder and Lead Developer</span>
